# melodyMiner

./: README.md  meson.build
db/: music_database.db
include/: ConfigurationFile.h  Database.h  ID3Tag.h  ID3TagManager.h  QueryProcessor.h  miner.h
include/database/: DatabaseUtils.h
include/database/daos/: AlbumDAO.h  BaseDAO.h  GroupDAO.h  PerformerDAO.h  PersonDAO.h  RolaDAO.h
include/database/models/: Album.h  Group.h  Performer.h  Person.h  Rola.h
src/: ID3Tag.c  ID3Tag.cpp  Miner.cpp  hello.c  hello.h  main.c  main.cc  main.cpp  miner.c
src/database/: Database.cpp
src/database/daos/: AlbumDAO.cpp  GroupDAO.cpp  PerformerDAO.cpp  PersonDAO.cpp  RolaDAO.cpp
src/database/db/: music_database.db
src/database/models/: Album.cpp  Group.cpp  Performer.cpp  Person.cpp  Rola.cpp
src/gui/: MinerDialog.cc  MinerDialog.h  RolaDetailview.cc  RolaDetailview.h  basic.ui  examplewindow.cc  examplewindow.h  examplewindow.ui  interface.ui  main.cc  main2.cpp  melodyMinerWindow.cc  melodyMinerWindow.h  melodyMinerWindow.ui  minerDialog.ui  roladetailwindow.ui  simple.cpp  simple2.cpp  style.css
src/gui/comp/: exampleworker.cc
src/gui/dialog/: FormatEditRola.cc  FormatEditRola.h  RolaController.cc  RolaController.h
src/mining/: Miner.cpp
src/query/: queryProcessor.cpp  queryProcessor.h
src/utils/: #QueryProcessor.cpp#  ConfigurationFile.cpp  ID3Tag.cpp  ID3TagManager.cpp  QueryProcessor.cpp  trash.cpp
test/: testQuery.c  testQuery.cpp  test_hello.c
